@@ -10,7 +10,7 @@ import net.minecraftforge.fml.common.Mod;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Set;
 
 @Mod.EventBusSubscriber(modid = MagicAndTabooMod.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD)
@@ -31,10 +31,10 @@ public class DataGenerator {
         generator.addProvider(true, new MATItemTagProvider(output, registry, blockTags.contentsGetter(), helper));
         generator.addProvider(true, new MATEntityTagProvider(output, registry, helper));
         generator.addProvider(true, new MATRecipeProvider(output));
-        generator.addProvider(true, new LootTableProvider(output, Set.of(), List.of(
+        generator.addProvider(true, new LootTableProvider(output, Set.of(), Collections.singletonList(
                 new LootTableProvider.SubProviderEntry(MATBlockLootProvider::new, LootContextParamSets.BLOCK)
         )));
-        generator.addProvider(true, new ForgeAdvancementProvider(output, registry, helper, List.of(new MATAdvancementGenerator())));
+        generator.addProvider(true, new ForgeAdvancementProvider(output, registry, helper, Collections.singletonList(new MATAdvancementGenerator())));
         generator.addProvider(true, new RegistryDataGenerator(output, registry));
     }
 }
